--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/svg+xml" href="/tomato.svg" />
 </head>
 <body>
-  <app-root></app-root>
+  <app-root class="app-root"></app-root>
 </body>
 </html>
