Move favicon into assets folder

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Pomodoro</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/svg+xml" href="/tomato.svg" />
+  <link rel="icon" type="image/svg+xml" href="assets/tomato.svg" />
 </head>
 <body>
   <app-root class="app-root"></app-root>
